# zerodaywarranty

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  conftest.py  mypy.ini  pyproject.toml  ruff.toml  zdw.py
.github/workflows/: ci.yml  deploy.yml  images.yml
backlog/: roadmap.yaml
catalog/agents/: 01-warranty-root-cause-orchestrator.yaml  02-supplier-lot-attribution.yaml
docs/: DEMO_WALKTHROUGH.md  RELEASE_PLAN.md  SCENARIO_PLAYBOOK.md  architecture.md  scenario-builder.html
docs/design/: README.md  ZeroDayWarranty_Agent_Console.html  ZeroDayWarranty_Architecture_Diagrams.html  ZeroDayWarranty_Audit_Ledger.html  ZeroDayWarranty_Azure_Deployment.html  ZeroDayWarranty_Calculations_and_References.html  ZeroDayWarranty_Capability_SwimLanes.html  ZeroDayWarranty_Experts_Panel.html  ZeroDayWarranty_Persona_Portals.html  ZeroDayWarranty_Process_3D.html  ZeroDayWarranty_Roadmap.html  ZeroDayWarranty_SwimLane_Views.html
docs/reference/: APEX-Scenario-Chains.xlsx  scenario-library.csv
docs/zero-day-warranty/: 00-overview.md  01-design.md  02-deployment.md  03-plan.md  04-experts-panel.md  README.md  capability-swim-lanes.md  data.md  (+1 more)
infra/: README.md  main-private.bicep  main-private.parameters.json  main.bicep  main.parameters.json
templates/: canonical-24-step-chain.yaml
tests/: test_audit.py  test_calculations.py  test_chain.py  test_consoles.py  test_domains_medallion.py  test_lanes.py  test_manifests.py  test_notify.py  test_process3d.py  test_roadmap.py  test_scenarios.py  test_server.py  test_stats.py
(+45 files in other folders)
