[project]
name = "zero-day-warranty"
version = "0.1.0"
description = "Zero Day Warranty — agentic automotive warranty root-cause investigation. An APEX-pattern delivery accelerator on the Microsoft + NVIDIA platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Deloitte Microsoft Technology & Services Practice" }]
license = { text = "Proprietary — Deloitte Internal" }
dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
zdw = "zero_day_warranty.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_day_warranty"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0",
    "openpyxl>=3.1.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
markers = [
    "conformance: marks tests verifying manifest / ledger conformance (round-trips, registry audits).",
]

[tool.coverage.run]
source = ["src/zero_day_warranty"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
